Configure Vercel deployment and permanent database setup
- Move all documentation to docs/ folder
- Configure backend for Vercel serverless deployment
- Set up permanent Neon database for all environments
- Add database seeding script with test data
- Update frontend to use Vercel backend
- Add comprehensive deployment documentation
- Configure Expo Go and local testing to use permanent database

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ yarn-error.*
 # local env files
 .env*.local
 
+# Database info file (contains connection string)
+api/.database-info
+
 # typescript
 *.tsbuildinfo
 
