Fix Vercel serverless function path: Move index.ts to api/api/
- Create api/api/ directory structure for Vercel serverless functions
- Move index.ts to api/api/index.ts (Vercel convention)
- Update import paths for new location
- Fix vercel.json to reference api/api/index.ts

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,11 +3,11 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.ts"
+      "destination": "/api/index.ts"
     }
   ],
   "functions": {
-    "index.ts": {
+    "api/index.ts": {
       "maxDuration": 30
     }
   }
