--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,7 +2,13 @@
   "version": 2,
   "buildCommand": "npm run vercel-build",
   "outputDirectory": ".",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
+    {
+      "source": "/",
+      "destination": "/api/index"
+    },
     {
       "source": "/(.*)",
       "destination": "/api/index"
