--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "@tanstack/react-query": "^5.90.15",
     "adhan": "^4.4.3",
     "bcrypt": "^6.0.0",
     "expo": "54.0.19",
@@ -39,6 +40,7 @@
     "expo-sensors": "^15.0.7",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.8",
     "geolib": "^3.3.4",
     "hijri-converter": "^1.1.1",
@@ -61,7 +63,9 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
