--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "^19.0.7",
     "expo-media-library": "^18.2.0",
+    "expo-network": "~8.0.8",
     "expo-notifications": "~0.32.12",
     "expo-sensors": "^15.0.7",
     "expo-sharing": "^14.0.7",
