--- a/admin/package.json
+++ b/admin/package.json
@@ -34,8 +34,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -78,5 +76,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
   }
 }
