feat: Implement complete data protection - prevent user data deletion
- Remove all deletion code from seed script
- Seed script now only creates missing demo users, never deletes data
- Protect db:reset command with FORCE_RESET requirement
- Add comprehensive data protection documentation
- Add safety script for database resets with warnings
- Update setup-database.js with data protection warnings

This ensures all user data is preserved in development, testing, and production environments.

--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
     "db:setup": "node setup-database.js",
     "db:migrate": "npx prisma migrate dev",
     "db:deploy": "npx prisma migrate deploy",
-    "db:reset": "npx prisma migrate reset",
+    "db:reset": "node scripts/reset-db.js",
     "db:studio": "npx prisma studio",
     "db:generate": "npx prisma generate",
     "db:seed": "npx ts-node prisma/seed.ts"
