feat: Improve admin dashboard and fix Android build configuration
- Update admin dashboard name from 'React App' to 'Admin - Tijaniyah Muslim Pro'
- Replace demo events message with real API integration
- Update logos throughout admin dashboard to use app icon
- Improve admin dashboard colors and styling (emerald/teal theme)
- Make analytics cards use real data from database
- Fix Android Gradle repository configuration to handle Maven Central 403 errors
- Add fallback repositories and network timeout configurations
- Update analytics service to fetch real upcoming events count

--- a/admin/public/manifest.json
+++ b/admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tijaniyah Admin",
+  "name": "Admin - Tijaniyah Muslim Pro",
   "icons": [
     {
       "src": "favicon.ico",
