--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -64,3 +64,12 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+# Network and repository configuration
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
+
+# Retry configuration for network issues
+systemProp.http.connectionTimeout=60000
+systemProp.http.socketTimeout=60000
