Fix events API errors, update quick actions, modernize Events UI, and improve error handling
- Fixed 500 errors in events API with comprehensive error handling
- Updated quick actions: removed Azan/Qibla, added Events/Community/Tijaniyah Wazifah/Lazeem
- Modernized Events screen UI with improved styling and layout
- Replaced react-native-youtube-iframe with WebView for Makkah Live player
- Added news categories feature with admin management
- Improved error handling across events and news services
- Added defensive error handling in Vercel handler for events endpoints
- Updated Events screen with modern design and better UX

--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
     "name": "Tijaniyah Muslim Pro",
     "slug": "tijaniyah-muslim-pro",
-    "version": "1.0.5",
-    "orientation": "portrait",
+    "version": "1.0.6",
+    "orientation": "default",
     "icon": "./assets/appicon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -27,7 +27,9 @@
         "backgroundColor": "#052F2A"
       },
       "package": "com.tijaniyahpro.app",
-      "versionCode": 6,
+      "versionCode": 7,
+      "enableEdgeToEdge": true,
+      "supportsTablet": true,
       "permissions": [
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION",
