--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tijaniyah-muslim-pro",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -66,6 +66,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "react-native-youtube-iframe": "^2.4.1",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
