--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "railway:build": "chmod +x build.sh && ./build.sh",
-    "vercel-build": "prisma generate && nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && nest build",
     "postinstall": "npx prisma generate",
     "db:setup": "node setup-database.js",
     "db:migrate": "npx prisma migrate dev",
